fb-clone-commit-2

--- a/fb-clone/src/App.css
+++ b/fb-clone/src/App.css
@@ -1,1 +1,9 @@
-
+.app{
+    background-color: #f1f2f5;
+    height: 100vh;
+}
+.app-body{
+    margin-top: 20px;
+    display: flex;
+    /* justify-content: space-between; */
+}
