--- a/e-commerce-product-catalogue/src/components/Product.css
+++ b/e-commerce-product-catalogue/src/components/Product.css
@@ -1,5 +1,7 @@
 .main-card{
+    text-decoration: none;
     background-color: #011a48;
+    color: #000 !important;
     /* padding: 10px; */
     border-radius: 10px;
     box-shadow: rgba(112, 112, 112, 0.35) 0px 5px 8px !important;
@@ -22,7 +24,7 @@
     transition: 0.5s ease-in-out;
 }
 .pro-card:hover .img{
-    transform: scale(1.06);
+    transform: scale(1.03);
     cursor: pointer;
 }
 .pro-card p{
