--- a/e-commerce-product-catalogue/src/components/Product.css
+++ b/e-commerce-product-catalogue/src/components/Product.css
@@ -7,12 +7,16 @@
     box-shadow: rgba(112, 112, 112, 0.35) 0px 5px 8px !important;
 
 }
-.pro-card{
+.pro-card {
     border-radius: 10px;
     padding: 5px;
    background-color: #fff;
     border: 1px solid #000;
     overflow: hidden;
+}
+.pro-card Link{
+    text-decoration: none;
+    width: 100%;
 }
 .pro-card h3{
     font-size: 20px;
