--- a/e-commerce-product-catalogue/src/components/Navbar.css
+++ b/e-commerce-product-catalogue/src/components/Navbar.css
@@ -5,27 +5,37 @@
     background: linear-gradient( to right, #000000, #011a48);
    
   }
-
-  .nav-bar .brand .brand-name{
+.brand1{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+.brand1 .brand-name{
+  text-decoration: none;
+  font-size: 25px;
+  color: #fff;
+  margin-bottom: 0px !important;
+}
+  .brand .brand-name{
     text-decoration: none;
     font-size: 25px;
     color: #fff;
     margin-bottom: 0px !important;
   }
 
-  .nav-bar .search input{
-    border: none !important;
+ .search input{
     padding: 10px 20px;
     width: 100%;
     border-radius:25px ;
     background-color: #000000c5;
     color: #fff;
+    border: 1px solid #fff ;
   }
   .nav-bar .search input:focus{
     border: none !important;
     box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px !important;
   }
-  .nav-bar .search{
+  .search{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +45,7 @@
     margin: 0;
     background-color: #fff;
   }
-  .nav-bar .search span{
+  .search span{
     font-size: 20px;
     color: #ecb101;
     padding: 5px 10px;
@@ -43,7 +53,7 @@
     border-radius: 50%;
     cursor: pointer;
   }
-  .nav-bar .cart .btn{
+  .cart .btn{
     padding: 10px 14px;
     border-radius: 50%;
     border: 1px solid #fff;
@@ -65,3 +75,52 @@
   color: #ecb101;
 }
 
+
+/* responsive navbar start */
+.navbar-responsive{
+  padding: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  background: linear-gradient( to right, #000000, #011a48);
+  display: none;
+}
+.navbar-responsive .combiner-div{
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+/* responsive navbar end */
+@media(max-width:768px){
+  .navbar-responsive{
+    display: flex;
+  }
+  .nav-bar{
+    display: none;
+  }
+  .navbar-wrapper{
+    display: none;
+  }
+}
+@media(max-width:400px){
+  .navbar-responsive{
+    gap: 5px;
+  }
+}
+
+.dropdown:focus{
+  border: none !important;
+}
+.dropdown-menu{
+  margin: 0;
+  background: linear-gradient( to right, #000000, #011a48);
+}
+.dropdown-menu li a{
+  color: #fff;
+}
+.dropdown-menu li{
+  border-bottom: 1px solid #ecb101;
+}
